# CMakeSandbox

./: .clang-tidy  CMakeLists.txt
LibraryABC/: CMakeLists.txt
LibraryABC/src/: CMakeLists.txt  foo_calls_bar.cpp  internal_bar.cpp
MyApplication/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
